Se añade archivo de login.js, función viewHome

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
   <title>Document</title>
 </head>
 <body>
+  <header>
+   
+    <main id="main"></main>
+  </header>
+  <section></section>
+  <footer> Creado por Shiran + Lucero + Jocelyn </footer>
   <script type="module" src="main.js"></script>
 </body>
 </html>
