Añadimos la configuración de firebase como script

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,29 @@
 </head>
 <body>
   <header>
-   
+    <nav>
+      <li>
+        <a href="#/"> Home </a>
+      </li>
+      <li>
+        <a href="#/login"> Inicio de sesión </a>
+      </li>
+      <li>
+        <a href="#/profile"> Perfil </a>
+      </li>
+      <li>
+        <a href="#/favorites"> Favoritos </a>
+      </li>
+      <li>
+        <a href="#/setting"> Configuración </a>
+      </li>
+      <li>
+        <a href="#/logout"> Cerrar sesión </a>
+      </li>
+    </nav>
     <main id="main"></main>
   </header>
-  <section></section>
+  <section id="container"></section>
   <footer> Creado por Shiran + Lucero + Jocelyn </footer>
   <script type="module" src="main.js"></script>
 </body>
