--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
   <title>Document</title>
 </head>
 <body>
@@ -13,5 +14,6 @@
   <section id="container"></section>
   <footer> Creado por Shiran + Lucero + Jocelyn </footer>
   <script type="module" src="main.js"></script>
+    
 </body>
 </html>
