--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <script type="module" src="main.js"></script>
-  <title>Document</title>
-</head>
-<body>
-  <header>
-    <main id="main"></main>
-  </header>
-  <section id="container"></section>
-  
-  <footer> Creado por Shiran + Lucero + Jocelyn </footer>
-  
-  
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+		/>
+		<script type="module" src="main.js"></script>
+		<link rel="stylesheet" href="index.css" type="text/css" />
+		<title>Document</title>
+	</head>
+	<body>
+		<header>
+			<main id="main"></main>
+		</header>
+		<section id="container"></section>
+	</body>
 </html>
