--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
 		<script type="module" src="main.js"></script>
 		<link rel="stylesheet" href="./styles/login.css" type="text/css" />
 		<link rel="stylesheet" href="./styles/home.css" type="text/css" />
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@300&family=Poppins:wght@100&display=swap');
+		</style>
 		<title>Document</title>
 	</head>
 	<body>
