--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 			<main id="main"></main>
 		</header>
 		<section id="container"></section>
-		<style> @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@300&display=swap')</style>
+		<style> 
+		@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@300&display=swap');
+		</style>
 	</body>
 </html>
